# embassy-rp-template

./: Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
src/: main.rs
