[package]
name = "embassy-rp-template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tmp117 = { version = "0.1.0", path = "../tmp117" }
embassy-embedded-hal = { features = ["defmt"], git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { features = ["defmt"], git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"], git = "https://github.com/embassy-rs/embassy" }
embassy-time = { features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"], git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"], git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
cyw43 = { features = ["defmt", "firmware-logs"], git = "https://github.com/embassy-rs/embassy" } # only for rpi pico w
cyw43-pio = { features = ["defmt", "overclock"], git = "https://github.com/embassy-rs/embassy" } # only for rpi pico wj

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.7.15"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.11" }
embedded-hal-async = "0.2.0-alpha.2"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.1", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2
